# StockBreakout

./: .gitignore  LICENSE  README.md
Dashboard/: README.md  complex_candlestick.py  dados.py  dashboard.py  graficos.py  k8s.py  pyproject.toml
Dashboard/partes/: breakouts.py  overview.py
DownloadStocks/: Dockerfile  README.md  go.mod  go.sum  justfile  main.go
DownloadStocks/finazon/: finazon.go
ReplayStocks/: README.md  go.mod  go.sum  main.go
StockPipeline/: Dockerfile  Dockerfile.base  Dockerfile.base.old  Dockerfile.ubuntu  README.md  builldall  download.html  logs.txt  serviceaccount.yaml  stock_pipeline.py  stock_pipeline.yaml  streamlit.yaml  ubuntu.yaml
deploy/: 01-install-strimzi  03-install-kafka-ui  README.md  criar-tabelas.sql  flink-session.yaml  install  job-teste.yaml  kafka-kraft.yaml  kafkaui-values.yaml  metallb.yaml  postgres-operator.yaml  postgres.yaml  stock-dw.yaml
